--- a/EasyPieces.TestConsole/EasyPieces.TestConsole.csproj
+++ b/EasyPieces.TestConsole/EasyPieces.TestConsole.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EasyPieces.Builders\EasyPieces.Builders.csproj" />
+    <ProjectReference Include="..\EasyPieces\EasyPieces.csproj" />
   </ItemGroup>
 
 </Project>
